tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_false_departlane/errors.duarouter
Error: Invalid departLane definition for vehicle '1';
 must be one of ("random", "free", "allowed", "best", "best_prob", "first", or an int>=0)
Quitting (on error).
